--- a/src/components/menu-item/menu-item.styles.css
+++ b/src/components/menu-item/menu-item.styles.css
@@ -1,15 +1,3 @@
-.homepage{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-}
-.directory-menu{
-    width:100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-between;
-}
 .menu-item{
     min-width: 30%;
     height: 240px;
@@ -18,23 +6,49 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    margin: 0 7.5px 15px; 
+    margin: 0 7.5px 15px;
+    background-position: center;
+    background-size:cover;
+    overflow: hidden;
+}
+.large{
+    height:380px;
 }
 .menu-item:first-child{
     margin-right: 7.5px;
 }
+.menu-item:hover{
+   cursor:pointer
+   
+}
 .menu-item:last-child{
     margin-left: 7.5px;
 }
+.background-image{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size:cover;
+}
+.background-image:hover{
+    transform: scale(1.1);
+    transition: transform 6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
 .content{
     height:90px;
-    padding: 0.25px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border:1px solid black ;
+    background-color: #ffffff;
+    opacity:0.7;
+    position: absolute;
  
+}
+.content:hover{
+    opacity: 3.9;
 }
 .title{
     font-weight: bold;
